[project]
name = "bot-timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.1",
    "spotipy>=2.25.1",
    "twitchio<3.0",
    "websockets>=15.0.1",
]
